--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,1 +1,148 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: "roboto", serif;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px;
+  padding: 10px 48px;
+  background-color: #1f2937;
+}
+.navlist {
+  list-style: none;
+}
+
+.navlist li {
+  display: inline;
+}
+
+.navlist a {
+  font-size: 18px;
+  color: #e5e7eb;
+  margin: 10px;
+  text-decoration: none;
+}
+.logo {
+  font-size: 24px;
+  font-weight: 700;
+  margin: 10px;
+  color: #f9faf8;
+}
+
+.hero {
+  display: flex;
+  background-color: #1f2937;
+  margin: 0px;
+  padding: 75px 48px 75px;
+  justify-content: space-between;
+}
+.maintexthero {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: 1000;
+}
+.subtexthero {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
+button {
+  display: flex;
+  background-color: #3882f6;
+  border: none;
+  
+  font-weight: 700;
+  color: #f9faf8;
+  align-content: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 8px;
+}
+.hero-button > button {
+  padding: 10px 20px;
+}
+.card2 {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  padding: 32px 75px 75px;
+}
+.card2 > h1 {
+  padding: 32px;
+}
+.card2-images {
+  display: flex;
+  gap:15px;
+  justify-content: space-evenly;
+  align-content: center;
+}
+.card2-images > figure > img{
+  flex-direction: row-dense;
+  flex:1;
+  overflow: auto;
+}
+.quote-card {
+  background-color: #e5e7eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 75px 48px 75px;
+}
+blockquote {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+}
+.author {
+  font-size: 24px;
+  padding: 15px;
+  font-weight: bold;
+  margin-left: 300px;
+}
+
+.card3 {
+  padding: 0px;
+  margin: 0px;
+}
+.card3-signup {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 8px;
+  color: #f9faf8;
+  background-color: #3882f6;
+  padding: 5px 75px;
+  margin: 48px;
+}
+.card3-signup > div{
+  padding: 18px;
+ 
+}
+.card3-signup > div > p {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+.card3-signup > button {
+  align-self: center;
+  white-space: nowrap;
+  margin-right: 32px;
+  padding: 8px 32px;
+  border-radius: 8px;
+  border: 2px solid white;
+}
+footer {
+  margin: 0px;
+  padding: 24px;
+  display: flex;
+  background-color: #1f2937;
+  color: #f9faf8;
+  justify-content: center;
+}
+
 
